@@ -1,0 +1,7 @@
+<?php
+
+define('_MD_PROTECTOR_YOUAREBADIP','Diese IP wurden als Böse-IP vom Protector registriert.') ;
+define('_MD_PROTECTOR_TURNJAVASCRIPTON','JavaScript einschalten') ;
+define('_MD_PROTECTOR_DENYBYRBL','Protector hat den Beitrag gesperrt da die verwendete IP auf der Ausschlußliste steht') ;
+
+?>
