@@ -1,0 +1,7 @@
+<?php
+
+define('_MD_PROTECTOR_YOUAREBADIP','Vous êtes enregistré par Protector comme ayant une mauvaise adresse IP.') ;
+define('_MD_PROTECTOR_TURNJAVASCRIPTON','Activer JavaScript') ;
+define('_MD_PROTECTOR_DENYBYRBL','Protector rejette votre poste, parce que votre adresse IP est enregistré dans RBL') ;
+
+?>
